feat: basic race stats endpoint
