# src/api.yaml
@@ -5,6 +5,37 @@ info:
 servers:
   - url: http://localhost:3000/
 paths:
+  /super-hero-race/stats:
+    get:
+      tags:
+        - Super Hero Race
+      description: Returns statistics on a superhero race
+      responses:
+        200:
+          description: |
+            The request was sucessful. Returns an object with the race's
+            statistics
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  position:
+                    type: number
+                  code:
+                    type: number
+                  name:
+                    type: string
+                  laps:
+                    type: number
+                  time:
+                    type: number
+        400:
+          $ref: "#/components/responses/InvalidInput"
+          
+        500:
+          $ref:  "#/components/responses/InternalError"
+
   /image/bulk/count-values:
     post:
       tags:
@@ -34,33 +65,40 @@ paths:
                 "2": 2
                 "100": 0
         400:
-          description: The request failed due to user invalid input
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - type: object
-                    properties:
-                      message:
-                        type: string
-                      errors:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            path:
-                              type: string
-                            message:
-                              type: string
-                            errorCode:
-                              type: string
-                  - type: string
-
+          $ref: "#/components/responses/InvalidInput"
 
         500:
-          description: The request failed due to an internal development error
-          content:
-            application/json:
-              schema:
-                type: string
-                example: Internal Server Error
+          $ref: "#/components/responses/InternalError"
+          
+
+components:
+  responses:
+    InternalError:
+      description: The request failed due to an internal development error
+      content:
+        application/json:
+          schema:
+            type: string
+            example: Internal Server Error
+    InvalidInput:
+      description: The request failed due to user invalid input
+      content:
+        application/json:
+          schema:
+            oneOf:
+              - type: object
+                properties:
+                  message:
+                    type: string
+                  errors:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        path:
+                          type: string
+                        message:
+                          type: string
+                        errorCode:
+                          type: string
+              - type: string
